Miscellaneous code cleanup (#470)